create database use code-first

--- a/EntityFramework/EntityFramework/EntityFramework.csproj
+++ b/EntityFramework/EntityFramework/EntityFramework.csproj
@@ -44,6 +44,8 @@
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -52,6 +54,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Model\DataContext.cs" />
+    <Compile Include="Model\Schema\HocPhan.cs" />
+    <Compile Include="Model\Schema\LopHocPhan.cs" />
+    <Compile Include="Model\Schema\SinhVien.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
