add database use migration

--- a/EntityFramework/EntityFramework/EntityFramework.csproj
+++ b/EntityFramework/EntityFramework/EntityFramework.csproj
@@ -54,6 +54,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Migrations\202004190215336_InitialCreate.cs" />
+    <Compile Include="Migrations\202004190215336_InitialCreate.designer.cs">
+      <DependentUpon>202004190215336_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202004190306030_Create-database.cs" />
+    <Compile Include="Migrations\202004190306030_Create-database.designer.cs">
+      <DependentUpon>202004190306030_Create-database.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Model\DataContext.cs" />
     <Compile Include="Model\Schema\HocPhan.cs" />
     <Compile Include="Model\Schema\LopHocPhan.cs" />
@@ -64,6 +73,14 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\202004190215336_InitialCreate.resx">
+      <DependentUpon>202004190215336_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202004190306030_Create-database.resx">
+      <DependentUpon>202004190306030_Create-database.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
